# bob_engine

./: Cargo.toml  Documentation.txt  README.md  check_output.txt
src/: app.rs  main.rs
src/core_systems/: renderer_system.rs
src/core_systems/core_components/: transform.rs
src/deprecated/: texture_cache.rs
src/engine/: asset_management.rs  engine.rs  input.rs  mod.rs  system_bootstrap.rs
src/engine/asset_management/: asset.rs
src/engine/ecs/: component_store.rs  dynamic_world.rs  entities.rs  mod.rs  query.rs  system_base.rs  system_bootstrap.rs  system_group.rs
src/engine/ecs/core_systems/: mod.rs  render_system.rs  renderer_system.rs  sprite_batch_allocator_system.rs  test_system.rs  transform_system.rs
src/engine/ecs/core_systems/core_components/: mod.rs  sprite.rs  transform.rs
src/engine/math/: vec.rs
src/engine/renderer/: camera.rs  mod.rs  renderer.rs  vertex.rs
src/engine/renderer/shaders/: shader.wgsl  sprite.frag.hlsl  sprite.vert.hlsl
src/engine/rendering/: camera.rs  instance.rs  mod.rs  render_system.rs  renderer.rs  sprite_batch_allocator_system.rs  texture.rs  tilemap_renderer.rs  vertex.rs
src/engine/rendering/shaders/: shader.wgsl  tilemap.wgsl
src/engine/rendering/tilemap/: mod.rs  tilemap.rs
src/engine/system/: system_macro.rs  systems.rs
src/math/: vec.rs
src/renderer/: renderer.rs
src/test/: player.rs
