[package]
name = "bob_engine"
version = "0.1.0"
edition = "2024"

[features]
default = ["simd"]
simd = []  


[dependencies]
bytemuck = { version = "1", features = ["derive"] }
winit = "0.30"
# Use the latest version available (0.17+ as of early 2026)
# sdl3 = { version = "0.17", features = ["raw-window-handle"] }
# easy-sdl3-text = "0.4.1"
wgpu = "29.0.0"
pollster = "0.4.0"
image = "0.25"